syntax = "proto3";

package book;

import "google/protobuf/empty.proto"; // Import Empty message

option java_multiple_files = true;
option java_package = "com.proto.book";
option java_outer_classname = "BookProto";

service BookService {
  rpc SeedDatabase (google.protobuf.Empty) returns (SeedDatabaseResponse);
}

message SeedDatabaseResponse {
  enum Status {
    SUCCESS = 0;
    FAILED = 1;
  }
  Status status = 1;
}
